--- a/static/catsekb/app/sass/section.scss
+++ b/static/catsekb/app/sass/section.scss
@@ -3,14 +3,6 @@
 	position: relative;
 }
 
-.cat_container {
-	width: 80px;
-    height: 125px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
 .cat_a_mouse {
 	height: 90px;
 	position: absolute;
@@ -21,9 +13,6 @@
     transition: transform .5s ease;
 }
 
-.cat_container:hover + .cat_a_mouse {
-	 transform: translateX(-70%) rotate(45deg);
-}
 /* <---------- .about END ----------> */
 
 .line_container h2 {
